--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ springdoc.swagger-ui.csrf.enabled=true
 
 management.endpoints.web.exposure.include=mappings
 spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.hibernate.ddl-auto=update
 app.admin.emails=${ADMIN_EMAILS:${env.ADMIN_EMAILS:phtcon@ucsb.edu}}
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
